--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="label_ellipses">...</string>
 
     <string name="prompt_gender">Choose a gender</string>
+    <string name="prompt_intensity">Choose an intensity</string>
+    <string name="prompt_type">Choose a type</string>
 
 </resources>
