--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,7 @@
     <string name="title_dashboard">Fitness Tracker</string>
     <string name="title_activity_main_profile">Profiles</string>
     <string name="title_activity_main_exercise">Exercises</string>
-    <string name="title_activity_main_heartrate">Heart Rate Tracker</string>
-    <string name="title_activity_main_program">Program</string>
-    <string name="title_activity_main_repmax">Rep Max</string>
+    <string name="title_activity_main_resting_heartrate">Resting Heart Rate Tracker</string>
     <string name="title_activity_main_bmi">Body Mass Index</string>
     <string name="title_activity_heart_rate_counter">Heart Rate Counter</string>
 
