--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_main_exercise">Exercises</string>
     <string name="title_activity_main_resting_heartrate">Resting Heart Rate Tracker</string>
     <string name="title_activity_main_bmi">Body Mass Index</string>
+    <string name="title_activity_main_bmr">Level of Activity</string>
     <string name="title_activity_heart_rate_counter">Heart Rate Counter</string>
 
     <string name="label_ellipses">...</string>
