Added basic repmax interfaces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">Fitness Tracker</string>
     <string name="title_dashboard">Fitness Tracker</string>
+    <string name="title_activity_heart_rate_counter">Heart Rate Counter</string>
     <string name="title_activity_main_profile">Profiles</string>
     <string name="title_activity_main_exercise">Exercises</string>
     <string name="title_activity_main_resting_heartrate">Resting Heart Rate Tracker</string>
     <string name="title_activity_main_bmi">Body Mass Index</string>
     <string name="title_activity_main_bmr">Level of Activity</string>
     <string name="title_activity_main_ehr">Exercise Heart Rate</string>
-    <string name="title_activity_heart_rate_counter">Heart Rate Counter</string>
+    <string name="title_activity_main_repmax">RepMax</string>
 
     <string name="label_ellipses">...</string>
 
@@ -16,5 +17,4 @@
     <string name="prompt_type">Choose a type</string>
     <string name="prompt_levelOfActivity">Choose a level of activity</string>
     <string name="prompt_exercise">Choose exercise type</string>
-
 </resources>
